@@ -1,5 +1,9 @@
 2018-07-13  Julien Bect  <julien.bect@centralesupelec.fr>
 
+	stk_isnoisy.m: Clarify the case of noise model objects
+
+	* core/stk_isnoisy.m: Clarify the case of noise model objects.
+
 	stk_sampling_nestedlhs.m: Minor doc fix
 
 	* sampling/stk_sampling_nestedlhs.m: Minor doc fix.
